// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $10.00
  </p>
</div>
`;

exports[`should render component correctly with multiple expense 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totaling 
    $100.00
  </p>
</div>
`;
